Fix overflow issue

--- a/css/index.scss
+++ b/css/index.scss
@@ -442,7 +442,7 @@ main {
     &:before {
       background-color: $turquoise2;
       content: '';
-      width: 100%;
+      width: 80%;
       display: block;
       position: absolute;
       z-index: -1;
